[gd_scene load_steps=2 format=3 uid="uid://cf7s3hc4w8c6c"]

[ext_resource type="Script" path="res://scripts/DiscussionTimer.gd" id="1_a2fl5"]

[node name="DiscussionTimer" type="Node"]
script = ExtResource("1_a2fl5")

[node name="Scene Label" type="Label" parent="."]
offset_right = 119.0
offset_bottom = 23.0
size_flags_horizontal = 0
text = "Discussion Timer Scene"

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="TimerLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -11.5
offset_right = 20.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "02:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -174.0
offset_top = -286.0
offset_right = 175.0
offset_bottom = -159.0
grow_horizontal = 2
grow_vertical = 0
text = "To test the timer
Go to Title/Main Menu
Change the timer duration
Then come to this screen and see if the timer
has changed"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 80.0
offset_top = 59.0
offset_right = 238.0
offset_bottom = 90.0
text = "To Title/Main Menu"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
